# Moldavite

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COLOR_PALETTE_REFERENCE.txt  COMPONENT_PATTERNS.md  CONTRIBUTING.md  DESIGN_DOCUMENTATION_INDEX.md  DESIGN_SYSTEM.md  DESIGN_TOKENS.md  LICENSE  PROJECT_STATUS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: COLOR_PALETTE_REFERENCE.txt  COMPONENT_PATTERNS.md  DESIGN_DOCUMENTATION_INDEX.md  DESIGN_SYSTEM.md  DESIGN_TOKENS.md  FORGE.md  PLUGINS.md  PLUGINS_DESIGN.md  PROJECT_STATUS.md  RELEASING.md  guide.html  index.html  plugins.html  site.js  styles.css
docs/plans/: 2026-01-21-quick-switcher-design.md  2026-04-24-v1.1-polish-and-finish-design.md
scripts/: bump-version.mjs  check-bundle-size.mjs  extract-changelog.mjs
src/: App.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/example-plugin/moldavite-example/: README.md  manifest.json  plugin.js
src-tauri/example-plugin/moldavite-wordpress/: README.md  manifest.json  plugin.js
src-tauri/icons/: icon.icns
src-tauri/src/: backlinks_index.rs  calendar.rs  deep_link.rs  encryption.rs  forge_watcher.rs  frontmatter.rs  lib.rs  main.rs  migration.rs  paths.rs  persist.rs  security.rs  semantic.rs  stress_test.rs  templates_data.rs  types.rs  utils.rs  validation.rs  wiki.rs
src-tauri/src-swift/: Package.swift
src-tauri/src-swift/Sources/EventKitBridge/: EventKitBridge.swift
src-tauri/src/commands/: backlinks.rs  encryption.rs  export_import.rs  folders.rs  forges.rs  graph.rs  import_export.rs  import_obsidian.rs  locking.rs  mcp_settings.rs  metadata.rs  misc.rs  mod.rs  notes.rs  plugins.rs  root_files.rs  search.rs  semantic.rs  templates.rs  trash.rs  wiki.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src-tauri/src/templates/: daily-log.md  meeting-notes.md  project-plan.md
src/components/: ShortcutHelpModal.tsx  index.ts
src/hooks/: index.ts  useAutoLock.ts  useAutoSave.ts  useBacklinks.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useFolders.ts  useForgeWatcher.ts  useKeyboardShortcuts.ts  useNotes.navigation.test.tsx  useNotes.rename.test.tsx  useNotes.ts  usePluginDeepLinks.test.tsx  usePluginDeepLinks.ts  usePluginHost.ts  useRelatedNotes.ts  useSearch.ts  useSettings.ts  useSidebarContextMenu.ts  useSidebarDnd.ts  useSidebarLock.test.tsx  useSidebarLock.ts  useSidebarTags.ts  useTemplates.ts  useToast.ts  useTrash.ts
src/lib/: agents.test.ts  agents.ts  backlinks.ts  calendar.ts  changelog.test.ts  changelog.ts  constants.ts  fileSystem.conflict.test.ts  fileSystem.ts  forgeStorage.ts  index.ts  ipc.test.ts  ipc.ts  noteConflicts.ts  obsidianImport.ts  releaseNotes.ts  semantic.test.ts  semantic.ts  shortcuts.ts  slugify.test.ts  stripMarkdown.test.ts  tags.ts  templates.ts  validation.ts  (+1 more)
(+190 files in other folders)
