[package]
name = "notomattic"
version = "0.1.0"
description = "A native macOS note-taking app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notomattic_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "5.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4"

# Apple Calendar (EventKit) integration
swift-rs = "1.0"
