[package]
name = "notomattic"
version = "0.5.0"
description = "A privacy-first note-taking app"
authors = ["Notomattic Team"]
license = "MIT"
repository = "https://github.com/mauropereira/notomattic"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notomattic_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
dirs = "5.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4"

# Encryption dependencies for note locking
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }

# Export/Import and file dialogs
zip = "2.2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0"
